# alt-stack

./: .gitignore  Cargo.toml  GOAL.md  README.md  RESULT.md  SECURITY.md  WORKLOG.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  socket.yml  turbo.json
.changeset/: brave-routers-combine.md  config.json  generated-schema-assertions.md  native-cors-options.md  strong-maps-smile.md  typed-nested-cli.md
.codex/environments/: environment.toml
.cursor/rules/: create-conventional-commit.mdc
.github/: dependency-review-config.yml  renovate.json
.github/workflows/: codeql.yml  cut-example-server-version.yml  cut-kafka-producer-version.yml  dependency-review.yml  osv-scanner.yml  package-age.yml  publish-docs.yml  publish-packages.yml  publish-python-package.yml  reconcile-packages.yml  scorecard.yml  zizmor.yml
apps/docs/: README.md  api-coverage.json  docusaurus.config.js  package.json  sidebars.js
apps/example-altstack-server/: README.md  package.json  vitest.config.ts
apps/example-kafka-consumer/: README.md  package.json
apps/example-kafka-producer/: asyncapi.json  generated-types.ts  package.json  tsconfig.json
apps/example-workers/: package.json
examples/altstack-server/: README.md  generated-types.ts  package.json
examples/kafka-consumer/: README.md  package.json
examples/kafka-producer/: README.md  package.json
examples/nestjs-controllers/: README.md  package.json  tsconfig.build.json  tsconfig.json
examples/real-life/: .npmrc  .oxlintrc.json  README.md  (+5 more)
scripts/: check-npm-release-age.mjs  dry-run-publish.sh
tasks/: lessons.md  todo.md
(+195 files in other folders)
