[workspace]
members = [
  "packages/http-client-rust-tokio",
  "packages/rust-openapi-crate-gen",
  "packages/rust-openapi",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/AnthonyAltieri/alt-stack"

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
httpmock = "0.7.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
syn = { version = "2.0.108", features = ["full"] }
thiserror = "2.0.17"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
url = { version = "2.5.7", features = ["serde"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
